--- a/notebooks/bedrock-prompt-automotive.ipynb
+++ b/notebooks/bedrock-prompt-automotive.ipynb
@@ -1909,9 +1909,9 @@
   ],
   "instance_type": "ml.t3.medium",
   "kernelspec": {
-   "display_name": "conda_pytorch_p39",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda_pytorch_p39"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1923,7 +1923,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
