--- a/keymaker/keymaker_example.ipynb
+++ b/keymaker/keymaker_example.ipynb
@@ -42,17 +42,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "ac5b622e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['anthropic.claude-v2/qa', 'tii.falcon-7b-instruct/qa']"
+       "['meta.llama2-7b-chat/qa',\n",
+       " 'cohere.command-text-v14/qa',\n",
+       " 'ai21.j2-grande-instruct/qa',\n",
+       " 'amazon.titan-text-express-v1/qa',\n",
+       " 'anthropic.claude-v2/qa',\n",
+       " 'tii.falcon-7b-instruct/qa']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "c44d6f85",
    "metadata": {},
    "outputs": [],
@@ -77,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "6bf5463f",
    "metadata": {},
    "outputs": [
@@ -104,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "2b731e6f",
    "metadata": {},
    "outputs": [
@@ -112,13 +117,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Answer the question below as truthfully as possible considering the provided context.\n",
+      "Answer the question from the user below as truthfully as possible considering the provided context.\n",
       "If you don't know the answer, just say \"I don't know\"\n",
       "\n",
       "Context:\n",
       "\n",
       "\n",
-      "What is the tallest building in the world?\n"
+      "User: What is the tallest building in the world?\n",
+      "Assistant:\n"
      ]
     }
    ],
@@ -128,11 +134,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "f633c148",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The model 'ai21.j2-grande-instruct/qa' & task 'qa' combination does not exist in the library. To check available templates run: show_templates\n"
+     ]
+    },
+    {
+     "ename": "SystemExit",
+     "evalue": "0",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[0;31mSystemExit\u001b[0m\u001b[0;31m:\u001b[0m 0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/rodzanto/opt/miniconda3/lib/python3.9/site-packages/IPython/core/interactiveshell.py:3259: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
+     ]
+    }
+   ],
+   "source": [
+    "prompts = keymaker.translate(\n",
+    "    user_input = 'What is the tallest building in the world?',\n",
+    "    models = ['cohere.command-text-v14', 'meta.llama2-7b-chat', 'amazon.titan-text-express-v1', 'ai21.j2-grande-instruct/qa'],\n",
+    "    task = 'qa'\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "594b6f8b",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(prompts)"
+   ]
   }
  ],
  "metadata": {
