--- a/keymaker/keymaker_example.ipynb
+++ b/keymaker/keymaker_example.ipynb
@@ -134,52 +134,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "id": "f633c148",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The model 'ai21.j2-grande-instruct/qa' & task 'qa' combination does not exist in the library. To check available templates run: show_templates\n"
-     ]
-    },
-    {
-     "ename": "SystemExit",
-     "evalue": "0",
-     "output_type": "error",
-     "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[0;31mSystemExit\u001b[0m\u001b[0;31m:\u001b[0m 0\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/rodzanto/opt/miniconda3/lib/python3.9/site-packages/IPython/core/interactiveshell.py:3259: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
-      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "prompts = keymaker.translate(\n",
     "    user_input = 'What is the tallest building in the world?',\n",
-    "    models = ['cohere.command-text-v14', 'meta.llama2-7b-chat', 'amazon.titan-text-express-v1', 'ai21.j2-grande-instruct/qa'],\n",
+    "    models = [\n",
+    "        'cohere.command-text-v14',\n",
+    "        'meta.llama2-7b-chat',\n",
+    "        'amazon.titan-text-express-v1',\n",
+    "        'ai21.j2-grande-instruct'\n",
+    "    ],\n",
     "    task = 'qa'\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "id": "9867ca32",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Answer the question below as truthfully as possible considering the provided context.\n",
+      "If you don't know the answer, just say \"I don't know\"\n",
+      "\n",
+      "Context:\n",
+      "\n",
+      "\n",
+      "Question: What is the tallest building in the world?\n",
+      "\n",
+      "Answer:\n",
+      "\n",
+      "-------------\n",
+      "\n",
+      "[INST] <<SYS>>Answer the question below as truthfully as possible considering the provided context.\n",
+      "If you don't know the answer, just say \"I don't know\"\n",
+      "<</SYS>>\n",
+      "CONTEXT:\n",
+      "\n",
+      "QUESTION: What is the tallest building in the world?\n",
+      "[/INST]\n",
+      "\n",
+      "-------------\n",
+      "\n",
+      "Answer the question below as truthfully as possible considering the provided context.\n",
+      "If you don't know the answer, just say \"I don't know\"\n",
+      "\n",
+      "Context:\n",
+      "\n",
+      "\n",
+      "User: What is the tallest building in the world?\n",
+      "\n",
+      "Assistant:\n",
+      "\n",
+      "-------------\n",
+      "\n",
+      "Answer the question below as truthfully as possible considering the provided context.\n",
+      "If you don't know the answer, just say \"I don't know\"\n",
+      "Context:\n",
+      "\n",
+      "###\n",
+      "Question: What is the tallest building in the world?\n",
+      "Answer:\n",
+      "\n",
+      "-------------\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, j in enumerate(prompts):\n",
+    "    print(prompts[i])\n",
+    "    print(\"\\n-------------\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "594b6f8b",
+   "id": "8ea3af1c",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "print(prompts)"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8e4fdef9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
