--- a/notebooks/ReAct-Prompting-langchain-agents-hospitality.ipynb
+++ b/notebooks/ReAct-Prompting-langchain-agents-hospitality.ipynb
@@ -33,7 +33,7 @@
     "id": "wPdWz1IdxyBR"
    },
    "source": [
-    "To run this notebook, we will need to use an OpenAI LLM. Here we will setup the LLM we will use for the whole notebook, just input your openai api key when prompted. "
+    "Here we will setup the LLM we will use for the whole notebook, just input your openai api key when prompted. "
    ]
   },
   {
